@@ -24,7 +24,7 @@ $tt_content_cols = Array(
 		'config' => Array (
 			'type' => 'select',
 			'foreign_table' => 'sys_dmail_category',
-			'foreign_table_where' => 'AND sys_dmail_category.pid IN (###PAGE_TSCONFIG_IDLIST###) ORDER BY sys_dmail_category.uid',
+			'foreign_table_where' => 'AND sys_dmail_category.l18n_parent=0 AND sys_dmail_category.pid IN (###PAGE_TSCONFIG_IDLIST###) ORDER BY sys_dmail_category.uid',
 			'size' => 5,
 			'minitems' => 0,
 			'maxitems' => 30,
@@ -43,7 +43,7 @@ $tempCols = Array(
 		'config' => Array (
 			'type' => 'select',
 			'foreign_table' => 'sys_dmail_category',
-			'foreign_table_where' => 'AND sys_dmail_category.pid IN (###PAGE_TSCONFIG_IDLIST###) ORDER BY sys_dmail_category.uid',
+			'foreign_table_where' => 'AND sys_dmail_category.l18n_parent=0 AND sys_dmail_category.pid IN (###PAGE_TSCONFIG_IDLIST###) ORDER BY sys_dmail_category.uid',
 			'size' => 5,
 			'minitems' => 0,
 			'maxitems' => 30,
@@ -72,7 +72,7 @@ $tempCols = Array(
 		'config' => Array (
 			'type' => 'select',
 			'foreign_table' => 'sys_dmail_category',
-			'foreign_table_where' => 'AND sys_dmail_category.pid IN (###PAGE_TSCONFIG_IDLIST###) ORDER BY sys_dmail_category.uid',
+			'foreign_table_where' => 'AND sys_dmail_category.l18n_parent=0 AND sys_dmail_category.pid IN (###PAGE_TSCONFIG_IDLIST###) ORDER BY sys_dmail_category.uid',
 			'size' => 5,
 			'minitems' => 0,
 			'maxitems' => 30,
@@ -121,9 +121,9 @@ $TCA['sys_dmail_category'] = Array (
 		'tstamp' => 'tstamp',
 		'crdate' => 'crdate',
 		'cruser_id' => 'cruser_id',
-        'languageField' => 'sys_language_uid',
-        'transOrigPointerField' => 'l18n_parent',
-        'transOrigDiffSourceField' => 'l18n_diffsource',
+		'languageField' => 'sys_language_uid',
+		'transOrigPointerField' => 'l18n_parent',
+		'transOrigDiffSourceField' => 'l18n_diffsource',
 		'sortby' => 'sorting',
 		'delete' => 'deleted',
 		'enablecolumns' => Array (
